// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiselect should render error 1`] = `
"[90m│[39m
[33m▲[39m  test message
[33m│[39m  [36m◻[39m foo
[33m│[39m  [2m◻[22m [2mbar[22m
[33m│[39m  [2m◻[22m [2mbaz[22m
[33m└[39m  [33mPlease select at least one option.[39m
[8m-[28m  [0m[2mPress [90m[47m[7m space [27m[49m[39m to select, [90m[47m[7m enter [27m[49m[39m to submit[22m[0m
"
`;

exports[`multiselect should render initial state 1`] = `
"[90m│[39m
[36m◆[39m  test message
[36m│[39m  [36m◻[39m foo
[36m│[39m  [2m◻[22m [2mbar[22m
[36m│[39m  [2m◻[22m [2mbaz[22m
[36m└[39m
"
`;

exports[`multiselect should render initial state with initialValue 1`] = `
"[90m│[39m
[36m◆[39m  test message
[36m│[39m  [32m◼[39m [2mfoo[22m
[36m│[39m  [32m◼[39m bar
[36m│[39m  [2m◻[22m [2mbaz[22m
[36m└[39m
"
`;
